# PriorLearning

./: .gitignore  LICENSE  README.md  genindex.html  index.html  notes.txt  objects.inv  pyproject.toml  setup.cfg  untitled1.py
.github/workflows/: docs.yml
.ipynb_checkpoints/: normal-model-checkpoint.ipynb
PriorLearning/: _case_studies.py  _sim_varying_thres_pois.py  combine_losses.py  csae_studies.py  discrepancy_measures.py  elicitation_techniques.py  elicitation_wrapper.py  global_config_params.py  loss_helpers.py  multi_loss_weighting.py  nn_implementation.py  normal_cs.py  plot_helpers.py  quadratic_splines.py  simulator.py  target_quantities.py  training.py
PriorLearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PriorLearning/.ipynb_checkpoints/: global_config_params-checkpoint.py  helper_functions-checkpoint.py  simulator-checkpoint.py
_modules/: index.html
_modules/functions/: prior_simulation.html
_modules/setup/: create_dictionaries.html
_modules/user_input/: generative_models.html  utils.html
_sources/: case_studies.rst  index.rst
_sources/notebooks/: binomial_model.ipynb
api/dags/: dags.elicitation_pipeline.html
api/functions/: functions.helper_functions.html  functions.loss_computation.html  functions.prior_simulation.html  functions.targets_elicits_computation.html  modules.html
api/setup/: modules.html  setup.html
doc/: Makefile
doc/source/: MakeMyPrior.rst  case_studies.rst  conf.py  index.rst  modules.rst
docs/: Makefile
docs/source/: PriorLearning.target_quantities.rst  case_studies.rst  conf.py
elicit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
elicit/dags/: elicitation_pipeline.py
elicit/functions/: helper_functions.py  loss_computation.py  loss_functions.py  model_simulation.py  prior_simulation.py  targets_elicits_computation.py  training.py
elicit/notes/: general_notes.txt
elicit/setup/: create_dictionaries.py  input_functions.py  write_results.py
notebooks/: multilevel_model.html
(+59 files in other folders)
