[metadata]
name = PriorLearning
description = Learns prior distributions based on expert knowledge
url = https://github.com/florence-bockting/PriorLearning
author = Florence Bockting
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.7
    Programming Language :: Python :: 3.12.0

[options]
python_requires = >=3.6
packages = PriorLearning
install_requires =
    tensorflow >= 2.12.0
    patsy >= 0.5.3
    numpy >= 1.23.5
    tensorflow_probability >= 0.20.1
    seaborn >= 0.12.2
    matplotlib >= 3.7.1
    bayesflow >= 1.1.3

[options.extras_require]
testing =
    tox >= 3.24
    pytest >= 6.0
    pytest-cov >= 2.10.0

docs =
    sphinx >= 5.1.0
    sphinx-book-theme>=0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1